k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: webmethods
  labels:
    description: demo-microservice-in-k8s
