k8s/msr-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-runtime
  namespace: webmethods
  labels:
    app: wm-msr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wm-msr
  template:
    metadata:
      labels:
        app: wm-msr
    spec:
      containers:
      - name: wm-msr
        image: <your_username>/wm-msr-demo:10.15
        ports:
        - containerPort: 5555
        livenessProbe:
          httpGet:
            path: /invoke/wm.server/ping
            port: 5555
          initialDelaySeconds: 120
          timeoutSeconds: 10
