k8s/msr-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: msr-loadbalancer
  namespace: webmethods
  labels:
    app: msr-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 5555
  selector:
    app: wm-msr
