k8s/msr-service.yml
apiVersion: v1
kind: Service
metadata:
  name: msr-service
  namespace: webmethods
spec:
  selector:
    app: wm-msr
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
