k8s/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: webmethods
  labels:
    app: postgresql
spec:
  selector:
    app: postgresql
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
