k8s/msr-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: msr-service
  namespace: webmethods
spec:
  selector:
    app: wm-msr
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msr-ingress
  namespace: webmethods
spec:
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: msr-service
                port:
                  number: 5555
